<resources>
    <string name="app_name">Chatto</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_profile">Choose Profile</string>
    <string name="login">Login</string>
    <string name="back_to_registration">Back to Registration</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="latest_message">Latest Message</string>
    <string name="logout">Logout</string>
    <string name="timestamp">Timestamp</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="note">Note</string>
    <string name="chat">Chat</string>
    <string name="sign_up">Sign Up</string>
    <string name="covid_19">COVID-19</string>
    <string name="you">you:</string>
    <string name="location">Location</string>
    <string name="add">add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>

</resources>
