<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bot_nav_chat"
        android:title="@string/chat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chat_bubble_black_24dp"/>

    <item android:id="@+id/bot_nav_news"
        android:title="@string/news"
        app:showAsAction="ifRoom"
        android:icon="@drawable/news"/>

    <item android:id="@+id/bot_nav_weather"
        android:title="@string/weather"
        app:showAsAction="ifRoom"
        android:icon="@drawable/weather"/>

    <item android:id="@+id/bot_nav_note"
        android:title="@string/note"
        app:showAsAction="ifRoom"
        android:icon="@drawable/note"/>

</menu>