<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <EditText
        android:id="@+id/email_et_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_edit_text_register_and_login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password_et_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/password_et_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_edit_text_register_and_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="@+id/email_et_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_et_login"
        app:layout_constraintTop_toBottomOf="@+id/email_et_login" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_register_and_login"
        android:text="@string/login"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/back_to_registration_tv_login"
        app:layout_constraintEnd_toEndOf="@+id/password_et_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_et_login"
        app:layout_constraintTop_toBottomOf="@+id/password_et_login" />

    <TextView
        android:id="@+id/back_to_registration_tv_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/back_to_registration"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />
</androidx.constraintlayout.widget.ConstraintLayout>