<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:background="@color/mainBackground"
    tools:context=".register_login.Register">

    <EditText
        android:id="@+id/username_et_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/username"
        android:background="@drawable/rounded_edit_text_register_and_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email_et_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_profile_button_register" />

    <EditText
        android:id="@+id/email_et_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_edit_text_register_and_login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password_et_register"
        app:layout_constraintEnd_toEndOf="@+id/username_et_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/username_et_register"
        app:layout_constraintTop_toBottomOf="@+id/username_et_register" />


    <EditText
        android:id="@+id/password_et_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_edit_text_register_and_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="@+id/email_et_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_et_register"
        app:layout_constraintTop_toBottomOf="@+id/email_et_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_register_and_login"
        android:text="@string/register"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/already_have_an_account_tv_register"
        app:layout_constraintEnd_toEndOf="@+id/password_et_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_et_register"
        app:layout_constraintTop_toBottomOf="@+id/password_et_register" />

    <TextView
        android:id="@+id/already_have_an_account_tv_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <Button
        android:id="@+id/choose_profile_button_register"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/choose_profile_civ_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="#fff"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/choose_profile_button_register"
        app:layout_constraintEnd_toEndOf="@+id/choose_profile_button_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/choose_profile_button_register"
        app:layout_constraintTop_toTopOf="@+id/choose_profile_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>